--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <p>
   <li *ngFor="let name of names">
-    <app-user-item></app-user-item>
+    <app-user-item [name]="name"></app-user-item>
   </li>
 </p>
